Fixed package.json name conventon

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "React Random Quotes",
+  "name": "react-random-quotes",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
